services/auth/k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: groupsapp-auth
  labels:
    app: groupsapp-auth
spec:
  selector:
    app: groupsapp-auth
  ports:
    - name: http
      port: 80
      targetPort: 8081
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
